Fixed: Non-square avatars are stretched

--- a/css/mail.scss
+++ b/css/mail.scss
@@ -489,6 +489,7 @@ input.submit-message,
 .avatar {
 	width: 32px;
 	height: 32px;
+	object-fit: cover;
 }
 
 .star {
